# hr-bot

./: .env.example  .gitignore  dev.docker-compose.yml  docker-compose.yml  prod.docker-compose.yml
back/: package.json  start.bat
back/db/: data-source.ts
bot/: applicant.json  pyproject.toml
bot/bot/: __main__.py  dispatcher.py
bot/bot/filter/: __init__.py  is_employee_filter.py  registered_filter.py
bot/bot/handlers/: __init__.py  callbacks.py  messages.py
bot/bot/handlers/applicant/: __init__.py  callbacks.py  messages.py
bot/bot/handlers/hr/: __init__.py  callbacks.py  messages.py
bot/bot/handlers/hr/stages/: __init__.py  callbacks.py  messages.py
bot/bot/keyboards/: __init__.py  inline.py  reply.py
bot/bot/keyboards/applicant/: inline.py
bot/bot/keyboards/hr/: __init__.py  inline.py
bot/bot/keyboards/hr/stages/: inline.py
bot/bot/keyboards/registration/: reply.py
bot/bot/middlewares/: __init__.py  apscheduler_middleware.py
bot/bot/misc/: __init__.py  applicant_status.py  configuration.py  functions.py
bot/bot/scheduler/: __init__.py  missed_call.py  reminder.py
bot/bot/services/: __init__.py  answers_service.py  comments_service.py  employees_service.py  users_service.py
bot/bot/states/: __init__.py  applicant.py  register_state.py  stages_state.py
buildfiles/: back.dockerfile  bot.dockerfile  generate-certificate.sh  training-bot.dockerfile  training_bot.dockerfile  web.dockerfile
certbot/: certbot.dockerfile
training_bot/: pyproject.toml
web/: pyproject.toml
webapp/: .gitignore  index.html  package.json  vite.config.js
(+154 files in other folders)
