[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["balistik <balistiktw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.6.0"
redis = "^5.0.4"
sqlalchemy = "^2.0.30"
aiohttp = "^3.9.5"
pandas = "^2.2.2"
openpyxl = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
